add zgc